@@ -1,3 +1,9 @@
+mcabber (0.10.4-dev)
+
+ * 
+
+ -- Mikael, ?
+
 mcabber (0.10.3)
 
  * [UI] Add option 'iq_time_hide'
